haskell-debian (3.87.2) unstable; urgency=low

  * Functor, Applicative, and Alternative instances for ghc-7.10
  * Fiddle with imports and ifdefs to fix build

 -- David Fox <dsf@seereason.com>  Sun, 22 Mar 2015 12:55:39 -0700

haskell-debian (3.87.1) unstable; urgency=low

  * Version bump to match cabal

 -- David Fox <dsf@seereason.com>  Mon, 02 Mar 2015 13:13:00 -0800

haskell-debian (3.86) unstable; urgency=low

  * Avoid dependency on th-orphans
  * Turn test program into a test-suite
  * add DEB_ENABLE_TESTS = yes to debian/rules
  * Support builds on older versions of GHC

 -- David Fox <dsf@seereason.com>  Sun, 15 Feb 2015 07:32:42 -0800

haskell-debian (3.85.3) unstable; urgency=low

  * Handle new pretty-1.1.2 package, which supercedes prettyclass.
  * Make a change to trigger a travis build.

 -- David Fox <dsf@seereason.com>  Fri, 06 Feb 2015 10:18:30 -0800

haskell-debian (3.85.2) unstable; urgency=low

  * If any of the lines of a multi-line control file field are not
    indented, indent all the lines by one space.
  * When formatting multi-line control file fields, make sure empty
    lines are replaced by a single (indented) '.'.

 -- David Fox <dsf@seereason.com>  Wed, 04 Feb 2015 11:23:42 -0800

haskell-debian (3.85.1) unstable; urgency=low

  * Allow build with process-extras-0.2.0

 -- David Fox <dsf@seereason.com>  Thu, 04 Dec 2014 06:23:38 -0800

haskell-debian (3.85) unstable; urgency=low

  * Fix some cases where the pretty printer output parsed to something
    different from its input

 -- David Fox <dsf@seereason.com>  Sat, 29 Nov 2014 09:27:42 -0800

haskell-debian (3.84.1) unstable; urgency=low

  * Remove a Show instance that overlaps the one derived in the Control
    type declaration.

 -- David Fox <dsf@seereason.com>  Sat, 29 Nov 2014 05:18:40 -0800

haskell-debian (3.84) unstable; urgency=low

  * Replace the Debian.Pretty module with a module copied from the